2010-12-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Check C/C++ compile when startup.
	: Add elisp and shell support for flymake.
	Disable FlymakeElisp because ede-projects.el error when startup.

2010-12-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake now support clang.

2010-12-08  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake both support vc6 and vc2010.

2010-12-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake now support vc.

	* init-toolbar.el: Improve flymake toolbar.

	* init-site.el: Setup INCLUDE path for gcc.

2010-12-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (org-mode-hook): Don't enable whitespace and
	auto-fill-mode in org.

2010-12-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake now support c/c++ header file.
	: set flymake-log-level to 0.

2010-12-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Improve flymake setting.
	Enable global-linum-mode.
	: Add flymake setting for python using pyflakes.

	* init-toolbar.el: Add flymake toolbar.

	* init-basic.el: Add flymake setting.

2010-11-29  Meteor Liu  <meteor1113@gmail.com>

	* Update auto-complete to 1.3.1

	* init-misc.el: Add rainbow-mode.

2010-11-17  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Update cn-weather toolbar item.

2010-11-15  Meteor Liu  <meteor1113@gmail.com>

	* lisp/cn-weather.el: Update cn-weather.

2010-10-18  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add Minor mode and Misc sub menu.
	Update minor mode sub menu.

2010-09-28  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add key description for toolbar help.
	: Add Revert and Change encoding menu.
	(emms-sub-menu): Improve emms menu.

2010-09-27  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add grep and moccur toolbar item.

2010-09-25  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (anything-command-map-prefix-key): anything.
